test/expected/explain_o_minus2_d_rk.out
struct S; explain S& operator--(double)
                       ^
24: error: parameter of postfix operator -- must be int
